# cltodo

./: .env  Cargo.toml  LICENSE  README.md  data.db  sqlx-data.json
.cltodo/: data.db
src/: main.rs
