[package]
name = "cltodo"
authors = ["Aloizio Macedo"]
description = "CLI Todo List."
repository = "https://github.com/AloizioMacedo/cltodo"
readme = "README.md"
version = "0.2.0"
license = "MIT"
edition = "2021"
categories = ["command-line-interface", "command-line-utilities"]
exclude = ["target", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = [ "derive" ] }
colored = "2.0.0"
dotenvy = "0.15.6"
home = "0.5.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "offline" ] }
tokio = { version = "1", features = ["full"] }


[profile.dev.package.sqlx-macros]
opt-level = 3
